--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -12,37 +12,42 @@ html {
   // 1rem = 10px - 10px/16px = 62.5%*
 
   @include respond(phone) {
-    font-size: 37.92%;
+    font-size: 43.75%;
     //1rem = 6px
     grid-template-columns: repeat(1, 1fr); // 1 columns for smol screens
   }
-}
-
-@include respond(tab-port) {
-  font-size: 43.75%;
-  .grid {
-    grid-template-columns: repeat(2, 1fr); // 1 columns for medium screens
+  @include respond(tab-port) {
+    font-size: 47.5%;
+    .grid {
+      grid-template-columns: repeat(2, 1fr); // 1 columns for medium screens
+    }
   }
-}
 
-@include respond(tab-land) {
-  font-size: 47.5%;
-  .grid {
-    grid-template-columns: repeat(2, 1fr); // 2 columns for big-smol screens
+  @include respond(tab-land) {
+    font-size: 50%;
+    .grid {
+      grid-template-columns: repeat(2, 1fr); // 2 columns for big-smol screens
+    }
   }
-}
 
-@include respond(desktop) {
-  font-size: 56.25%;
-  .grid {
-    grid-template-columns: repeat(2, 1fr); // 2 columns for extra-large screens
+  @include respond(desktop) {
+    font-size: 75%;
+    .grid {
+      grid-template-columns: repeat(
+        2,
+        1fr
+      ); // 2 columns for extra-large screens
+    }
   }
-}
 
-@include respond(big-desktop) {
-  font-size: 70%;
-  .grid {
-    grid-template-columns: repeat(4, 1fr); // 4 columns for extra-large screens
+  @include respond(big-desktop) {
+    font-size: 87.5%;
+    .grid {
+      grid-template-columns: repeat(
+        4,
+        1fr
+      ); // 4 columns for extra-large screens
+    }
   }
 }
 
