--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -4,7 +4,7 @@
   &:visited {
     text-transform: uppercase;
     text-decoration: none;
-    font-weight: 700;
+    font-weight: 600;
     padding: 2rem 4rem;
     display: inline-block;
     position: relative;
@@ -43,8 +43,7 @@
 
   &--white {
     background-color: $color-white;
-    color: $color-black;
-    border: 3px solid $color-black;
+    color: $color-grey-dark;
 
     &:hover {
       background-color: $color-black;
@@ -102,7 +101,7 @@
 
   @include respond(phone) {
     width: 50%;
-    transform: translate(5%, -100%);
+    transform: translate(5%, -150%);
   }
 
   button {
