--- a/sass/components/_feature-box.scss
+++ b/sass/components/_feature-box.scss
@@ -18,7 +18,7 @@
   text-align: center;
 
   @include respond(phone) {
-    width: 50%;
+    width: 55%;
     margin: 0 auto;
   }
 
