--- a/sass/components/_gallery.scss
+++ b/sass/components/_gallery.scss
@@ -1,33 +1,22 @@
 .gallery {
   position: relative;
-  width: 75%;
+  width: 100%;
+  height: 100%;
   margin: 1.5rem;
   flex-grow: 1;
   margin: 0 auto;
-  @include respond(phone) {
-    width: 100%;
-    margin: 0;
-  }
 
-  @include respond(tab-port) {
+  .container {
+    position: relative;
     width: 100%;
-    margin: 0;
-  }
-
-  @include respond(tab-land) {
-    width: 100%;
-    margin: 0;
-  }
-}
-.container {
-  width: 100%;
-  height: 60rem;
-  margin: auto;
-  background-color: $color-white;
-  box-shadow: 0 1.5rem 3rem $color-black;
-  &__slide {
-    width: max-content;
-    margin-top: 5rem;
+    height: 60rem;
+    margin: auto;
+    background-color: $color-white;
+    box-shadow: 0 1.5rem 3rem $color-black;
+    &__slide {
+      width: max-content;
+      margin-top: 5rem;
+    }
   }
 }
 
@@ -37,8 +26,13 @@
 
   @include respond(phone) {
     width: 35%;
+    height: 50%;
+  }
+
+  @include respond(tab-port) {
+    width: 35%;
     height: 60%;
-    transform: translate(0, -50%);
+    transform: translate(25%, -50%);
   }
 
   background-position: 50% 50%;
@@ -48,8 +42,8 @@
   position: absolute;
   z-index: 1;
   top: 50%;
-  transform: translate(0, -50%);
-  border-radius: 20px;
+  transform: translateY(-50%);
+  border-radius: 2rem;
   box-shadow: 0 1.5rem 3rem $color-black;
 
   &:nth-child(1),
@@ -74,14 +68,10 @@
     }
   }
   &:nth-child(3) {
-    left: 50%;
-
-    @include respond(phone) {
-      left: 60%;
-    }
+    left: 60%;
   }
   &:nth-child(4) {
-    left: calc(50% + 220px);
+    left: calc(55% + 220px);
   }
   &:nth-child(5) {
     left: calc(50% + 440px);
@@ -98,12 +88,20 @@
   .content {
     position: absolute;
     top: 50%;
-    left: 5rem;
+    left: 2.5rem;
     width: 30rem;
     text-align: left;
     padding: 0;
     color: #eee;
     transform: translate(0, -50%);
     display: none;
+
+    @include respond(phone) {
+      width: 35%;
+    }
+
+    @include respond(tab-port) {
+      width: 35%;
+    }
   }
 }
