--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -28,7 +28,7 @@
 }
 
 .contact {
-  width: 99%;
+  width: 90%;
   background-image: linear-gradient(
       105deg,
       rgba($color-white, 0.9) 0%,
